kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: app
        image: 385018113052.dkr.ecr.us-east-1.amazonaws.com/aws-eks-production-platform:latest
        ports:
        - containerPort: 80
